--- a/report/final.tex
+++ b/report/final.tex
@@ -43,9 +43,9 @@
 Pack Manager is a tool for helping you pack. It gives you a wardrobe list based on the weather of where you're going. It takes your (1) location, (2) time of travel, (3) personal dressing preferences, and gives you a set of clothes for you to wear and necessities that you can't forget. The goal is to make packing for an outing simple and fast. The application will have a very clean user interface; since its function is simple, its use must be equally simple. The application must be extensible, which means that adding new features must be a well-defined process that is easy.
 
 \subsection{User Benefits}
-Some examples of when a user may benefit from using our application is if they are frequent travelers. It is very difficult to track what to bring when traveling, especially if travel arrangements frequently change or users travel to many locations in sequence. Our application can update them on changing weather patterns for arbitrarily complex trips spanning many days and destinations. 
+A user may benefit from using our application if they are frequent travelers. It is very difficult to track what to bring when traveling, especially if travel arrangements frequently change or users travel to many locations in sequence. Our application can update them on changing weather patterns for arbitrarily complex trips spanning many days and destinations. 
 
-Another example is someone traveling to an area with which they are unfamiliar with its weather patterns. This makes it difficult to predict what would be necessary to bring. This user would simply enter their information into our application, which would automatically keep them up to date regardless of whether or not they know about monsoon season in Indonesia.
+Another example is someone traveling to an area with unfamiliar weather patterns. This makes it difficult to predict what would be necessary to bring. This user would simply enter their information into our application, which would automatically keep them up to date regardless of whether or not they know about monsoon season in Indonesia.
 
 \section{Feature Overview} % this could use beefing up
     When the user first starts the application, he or she will be presented with a login screen where they can choose to log in with Facebook. Once logged in, the user will enter their preferences, at which point the application is ready to make packing suggestions. Once this initial login is complete, the preferences will be assigned to their account, making future trip planning seamless. A packing list is suggested after the user enters their destination, which can include multiple stops, date of departure, duration, and takes into account preferences and trip parameters. From the ``My Trips'' tab, the user can view and modify this packing list. The application will notify the user in case of weather changes; this will require updates to the packing list.
@@ -269,7 +269,7 @@ See Fig.\ref{fig:ui} for some screen shots of the user interface.
 \begin{enumerate}
 \item Heather worked on the user interface. She worked on developing flow of the application, working closely with Alex. Heather is experienced with designing user interfaces for iOS.
 \item Alex is the lead programmer. He worked on integrating Heather's user interface with Kacey's weather API, as well as being a source of knowledge on general iOS development and Objective-C, which many group members were not familiar with.
-\item Steven worked on writing the report and the documentation. He added Doxygen and used \LaTeX to write the paper. 
+\item Steven worked on writing the report and the documentation. He added Doxygen and used \LaTeX  to write the paper. 
 \item Kacey worked on the weather API, doing research and wrapping it to make it accessible and easy to use. 
 \item Mitchell worked on the presentation and report as well as general programming tasks.
 \item Nick was in charge of build management and testing, integrating Travis-CI and managing the test infrastructure.
